--- a/index.html
+++ b/index.html
@@ -35,13 +35,39 @@
         <h3>Micro SaaS Tools</h3>
         <p>Coming soon: powerful yet minimal tools to help automate and enhance your day.</p>
       </div>
-    </section>
-
-    <section id="games" class="placeholder-section">
+    </section>    <section id="games" class="placeholder-section">
       <div class="container">
         <h3>Mini Games Hub</h3>
         <p>Jump into casual games built for fun — and powered by AdSense.</p>
-		<a href="/games/runner/" class="btn secondary">Play Runner Game</a>
+        
+        <div class="games-grid">
+          <div class="game-card">
+            <h4>3D Physics Cube</h4>
+            <p>Experience realistic 3D physics with an interactive cube. Control movement forces in real-time using intuitive controls and keyboard shortcuts.</p>
+            <div class="game-features">
+              <span class="feature-tag">🎮 Interactive Controls</span>
+              <span class="feature-tag">⚡ Physics Engine</span>
+              <span class="feature-tag">🎯 Force Adjustment</span>
+            </div>
+            <div class="game-buttons">
+              <a href="/games/devstral/babylon-improved.html" class="btn">Play Enhanced Version</a>
+              <a href="/games/devstral/babylon-fixed.html" class="btn secondary">Play Standard Version</a>
+            </div>
+          </div>
+          
+          <div class="game-card">
+            <h4>Runner Game</h4>
+            <p>Classic endless runner gameplay with smooth controls and challenging obstacles. Test your reflexes in this fast-paced adventure.</p>
+            <div class="game-features">
+              <span class="feature-tag">🏃 Endless Runner</span>
+              <span class="feature-tag">⭐ High Scores</span>
+              <span class="feature-tag">🎨 Smooth Graphics</span>
+            </div>
+            <div class="game-buttons">
+              <a href="/games/runner/" class="btn">Play Now</a>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
   </main>
