feat: Add refactored runner game with modern Three.js and reduced obstacles
- Updated root index.html to showcase both classic and refactored runner games
- Created complete runner-refactored game with modern ES6 modules
- Updated Three.js from v0.160.0 to v0.168.0 with ES6 import maps
- Fixed deprecated Three.js API (outputEncoding -> outputColorSpace)
- Implemented proper loading screen without destroying page structure
- Fixed focus/blur event handling to prevent unwanted game pausing
- Added ES6 module imports to all game systems and entities
- Fixed input system and obstacle generation functionality
- Reduced obstacle count from 10 to 5 for better gameplay balance
- Added high-performance WebGL rendering and optimizations

--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
               <a href="/games/devstral/babylon-fixed.html" class="btn secondary">Play Standard Version</a>
             </div>
           </div>
-          
-          <div class="game-card">
+            <div class="game-card">
             <h4>Runner Game</h4>
             <p>Classic endless runner gameplay with smooth controls and challenging obstacles. Test your reflexes in this fast-paced adventure.</p>
             <div class="game-features">
@@ -64,7 +63,25 @@
               <span class="feature-tag">🎨 Smooth Graphics</span>
             </div>
             <div class="game-buttons">
-              <a href="/games/runner/" class="btn">Play Now</a>
+              <a href="/games/runner/" class="btn secondary">Play Classic</a>
+              <a href="/games/runner-refactored/" class="btn">Play Enhanced</a>
+            </div>
+          </div>
+          
+          <div class="game-card">
+            <h4>Runner Game - Refactored</h4>
+            <p>Enhanced endless runner with modern ES6+ architecture, 60+ FPS performance, mobile touch controls, and immersive audio effects. Experience the next generation of web gaming.</p>
+            <div class="game-features">
+              <span class="feature-tag">🚀 60+ FPS Performance</span>
+              <span class="feature-tag">📱 Mobile Optimized</span>
+              <span class="feature-tag">🎵 3D Audio</span>
+              <span class="feature-tag">⚡ Modern Architecture</span>
+              <span class="feature-tag">🎮 Touch Controls</span>
+              <span class="feature-tag">✨ Visual Effects</span>
+            </div>
+            <div class="game-buttons">
+              <a href="/games/runner-refactored/" class="btn">Play Enhanced Version</a>
+              <a href="/games/runner-refactored/comparison.html" class="btn secondary">View Comparison</a>
             </div>
           </div>
         </div>
