Add Privacy Policy and Terms & Conditions pages and clean up test files
- Add comprehensive Privacy Policy page with COPPA compliance and AdSense terms
- Add detailed Terms and Conditions covering games, tools, and legal requirements
- Update main index.html footer with links to legal pages
- Add footer link styling to CSS with brand-consistent colors
- Remove temporary billboard test and verification files (19 files)
- Clean up workspace while maintaining essential documentation

--- a/index.html
+++ b/index.html
@@ -88,11 +88,14 @@
       </div>
     </section>
   </main>
-
   <footer class="site-footer" id="contact">
     <div class="container">
       <p>&copy; 2025 Jadaru. All rights reserved.</p>
-      <p>Email: contact@jadaru.co</p>
+      <p>
+        <a href="/privacy-policy.html">Privacy Policy</a> | 
+        <a href="/terms-conditions.html">Terms & Conditions</a> | 
+        Email: contact@jadaru.co
+      </p>
     </div>
   </footer>
 </body>
