Add Snake Game to main website index
- Added Snake Game card to games section on homepage
- Featured 3D graphics, touch controls, and Babylon.js engine
- Included game features showcase and play button
- Part of Snake game production release

--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
               <a href="/games/runner-refactored/" class="btn">Play Enhanced</a>
             </div>
           </div>
-          
-          <div class="game-card">
+            <div class="game-card">
             <h4>Runner Game - Refactored</h4>
             <p>Enhanced endless runner with modern ES6+ architecture, 60+ FPS performance, mobile touch controls, and immersive audio effects. Experience the next generation of web gaming.</p>
             <div class="game-features">
@@ -82,6 +81,22 @@
             <div class="game-buttons">
               <a href="/games/runner-refactored/" class="btn">Play Enhanced Version</a>
               <a href="/games/runner-refactored/comparison.html" class="btn secondary">View Comparison</a>
+            </div>
+          </div>
+          
+          <div class="game-card">
+            <h4>🐍 Snake Game</h4>
+            <p>Classic Snake game reimagined with stunning 3D graphics powered by Babylon.js. Enjoy smooth gameplay, particle effects, and responsive controls on desktop and mobile devices.</p>
+            <div class="game-features">
+              <span class="feature-tag">🎮 Classic Gameplay</span>
+              <span class="feature-tag">🎨 3D Graphics</span>
+              <span class="feature-tag">✨ Particle Effects</span>
+              <span class="feature-tag">📱 Touch Controls</span>
+              <span class="feature-tag">🏆 High Scores</span>
+              <span class="feature-tag">⚡ Babylon.js Engine</span>
+            </div>
+            <div class="game-buttons">
+              <a href="/games/snake/" class="btn">Play Snake Game</a>
             </div>
           </div>
         </div>
