--- a/games/snake/index.html
+++ b/games/snake/index.html
@@ -11,7 +11,10 @@
 <body>
   <header class="site-header">
     <div class="container">
-      <a href="/" class="btn">&#8592; Back to Main Page</a>
+      <h1 class="logo">Jadaru</h1>
+      <nav class="main-nav">
+        <a href="/" class="btn">&#8592; Back to Main Page</a>
+      </nav>
     </div>
   </header>
   <div class="game-container">
