Add Tic Tac Toe game

--- a/index.html
+++ b/index.html
@@ -99,6 +99,18 @@
               <a href="/games/snake/" class="btn">Play Snake Game</a>
             </div>
           </div>
+  <div class="game-card">
+    <h4>❌⭕ Tic Tac Toe</h4>
+    <p>A simple yet polished Tic Tac Toe game. Play against a friend on any device.</p>
+    <div class="game-features">
+      <span class="feature-tag">📱 Mobile Friendly</span>
+      <span class="feature-tag">🎨 Dark Theme</span>
+      <span class="feature-tag">🤝 Two Player</span>
+    </div>
+    <div class="game-buttons">
+      <a href="/games/tictactoe/" class="btn">Play Tic Tac Toe</a>
+    </div>
+  </div>
         </div>
       </div>
     </section>
