Add Google Analytics to all high-priority pages
- Added GA tracking to Tic Tac Toe game page
- Added GA tracking to Runner game (classic) page
- Added GA tracking to Runner game (refactored) page
- Added GA tracking to Snake game page
- Added GA tracking to 3D Physics Cube (enhanced) page
- Added GA tracking to 3D Physics Cube (standard) page
- Added GA tracking to Privacy Policy page
- Added GA tracking to Terms & Conditions page

This enables comprehensive user analytics across all main games
and legal pages to track engagement and popular content.

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -5,6 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Privacy Policy - Jadaru</title>
   <link rel="stylesheet" href="css/style.css" />
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WSS4ZGFN9L"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-WSS4ZGFN9L');
+  </script>
   <style>
     .legal-content {
       max-width: 800px;
