--- a/games/devstral/babylon-fixed.html
+++ b/games/devstral/babylon-fixed.html
@@ -5,6 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Babylon.js Physics Game - Fixed</title>
   <link rel="stylesheet" href="style.css">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WSS4ZGFN9L"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-WSS4ZGFN9L');
+  </script>
   <style>
     /* Essential minimal styles */
     #loadingScreen {
