--- a/games/snake/index.html
+++ b/games/snake/index.html
@@ -6,6 +6,15 @@
   <title>Snake Game - Babylon.js</title>
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="/css/style.css">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WSS4ZGFN9L"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-WSS4ZGFN9L');
+  </script>
   <script src="https://cdn.babylonjs.com/babylon.js"></script>
 </head>
 <body>  <header class="site-header">
