Add favicon link references to all HTML pages to resolve 404 errors

--- a/games/devstral/babylon-improved.html
+++ b/games/devstral/babylon-improved.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Babylon.js Physics Game - Improved</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">  <title>Babylon.js Physics Game - Improved</title>
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="stylesheet" href="style.css">
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-WSS4ZGFN9L"></script>
