--- a/games/runner-refactored/index.html
+++ b/games/runner-refactored/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Jadaru Runner - Refactored</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />  <title>Jadaru Runner - Refactored</title>
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-WSS4ZGFN9L"></script>
   <script>
