--- a/games/tictactoe/index.html
+++ b/games/tictactoe/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tic Tac Toe - Jadaru Games</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">  <title>Tic Tac Toe - Jadaru Games</title>
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="/css/style.css">
   <!-- Google tag (gtag.js) -->
