--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Jadaru</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />  <title>Jadaru</title>
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="stylesheet" href="css/style.css" />
   <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WSS4ZGFN9L"></script>
