--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-  <meta name="theme-color" content="#111827" />
-  <meta name="msapplication-navbutton-color" content="#111827" />
+  <meta name="theme-color" content="#1F2937" />
+  <meta name="msapplication-navbutton-color" content="#1F2937" />
   <meta name="apple-mobile-web-app-title" content="Jadaru" />
   
   <!-- Primary Meta Tags -->
