--- a/games/devstral/babylon-improved.html
+++ b/games/devstral/babylon-improved.html
@@ -16,40 +16,56 @@
   </script>
 </head>
 <body>
+  <header class="game-header">
+    <div class="game-header-container">
+      <a href="/" class="back-to-home" aria-label="Back to Jadaru Home">Jadaru Home</a>
+      <h1 class="current-game-title">3D Physics Cube</h1>
+      <!-- <a href="/games/" class="more-games">More Games</a> -->
+    </div>
+  </header>
+
+  <!-- Ad Slot: Top Banner -->
+  <div class="ad-container ad-banner-top" style="text-align: center; margin-bottom: 15px;">
+    <!-- AdSense code will be inserted here by Google -->
+    <div class="ad-placeholder" style="width: 728px; height: 90px; background: #f0f0f0; margin: 0 auto; display: flex; align-items: center; justify-content: center; font-style: italic; color: #777;">Advertisement Area (e.g., 728x90)</div>
+  </div>
+
   <!-- Loading Screen -->
   <div id="loadingScreen">
     <div class="loading-text">Loading Game...</div>
     <div class="loading-bar">
       <div class="loading-progress" id="loadingProgress"></div>
     </div>
-  </div>  <!-- Game UI -->
+  </div>
+
+  <!-- Game UI -->
   <div id="scoreLabel" class="ui-element">Score: 0</div>
-  <div id="forceLabel" class="ui-element">Force: (0, 0, 0)</div>
-  <div id="gameStats" class="ui-element">Time: 0s | FPS: 60 | Level: 1</div>
+  
+  <div id="topRightCluster">
+    <div id="forceLabel" class="ui-element">Force: (0, 0, 0)</div>
+    <div id="gameStats" class="ui-element">Time: 0s | FPS: 60 | Level: 1</div>
+    <!-- Force Control Panel -->
+    <div id="forceControl" class="ui-element">
+      <div>Movement Force</div> <!-- Simplified, specific styling in CSS -->
+      <div>
+        <button id="forceDecrease">-</button>
+        <input type="range" id="forceSlider" min="0.5" max="8" value="2" step="0.1">
+        <button id="forceIncrease">+</button>
+      </div>
+      <div>
+        <span id="forceValue">2.0</span> / 8.0
+      </div>
+      <div>Shortcuts: [ ] to adjust</div>
+    </div>
+    <button id="resetBtn" class="ui-element">Reset Game</button>
+    <button id="soundToggle" class="ui-element">🔊 Sound</button>
+    <button id="settingsBtn" class="ui-element">⚙️ Settings</button>
+    <button id="statsBtn" class="ui-element">📊 Stats</button>
+    <button id="pauseBtn" class="ui-element">⏸️ Pause</button>
+  </div>
+
   <div id="instructions" class="ui-element">Arrow keys: Move | Space: Jump | WASD: Alternative controls | [ ] : Adjust Force</div>
   
-  <!-- Force Control Panel -->
-  <div id="forceControl" class="ui-element" style="top: 100px; right: 200px; min-width: 180px; background: rgba(0,0,0,0.85);">
-    <div style="font-weight: bold; margin-bottom: 10px; color: #4CAF50;">Movement Force</div>
-    <div style="display: flex; align-items: center; margin-bottom: 8px;">
-      <button id="forceDecrease" style="background: #ff4444; color: white; border: none; padding: 5px 10px; border-radius: 3px; cursor: pointer; margin-right: 8px;">-</button>
-      <input type="range" id="forceSlider" min="0.5" max="8" value="2" step="0.1" style="flex: 1; margin: 0 8px;">
-      <button id="forceIncrease" style="background: #44ff44; color: white; border: none; padding: 5px 10px; border-radius: 3px; cursor: pointer; margin-left: 8px;">+</button>
-    </div>
-    <div style="text-align: center; font-size: 14px;">
-      <span id="forceValue">2.0</span> / 8.0
-    </div>
-    <div style="font-size: 12px; color: #ccc; margin-top: 5px;">
-      Shortcuts: [ ] to adjust
-    </div>
-  </div>
-  
-  <button id="resetBtn" class="ui-element">Reset Game</button>
-  <button id="soundToggle" class="ui-element" style="top: 140px; right: 10px;">🔊 Sound</button>
-  <button id="settingsBtn" class="ui-element" style="top: 180px; right: 10px;">⚙️ Settings</button>
-  <button id="statsBtn" class="ui-element" style="top: 220px; right: 10px;">📊 Stats</button>
-  <button id="pauseBtn" class="ui-element" style="top: 260px; right: 10px;">⏸️ Pause</button>
-
   <!-- Mobile Touch Controls -->
   <div class="mobile-controls">
     <button class="mobile-control-btn" id="mobileLeft">←</button>
@@ -62,9 +78,10 @@
   <!-- Settings Menu -->
   <div id="settingsMenu" class="menu-overlay">
     <div class="menu-content settings-panel">
-      <h2 class="menu-title">Settings</h2>      <div class="setting-item">
+      <h2 class="menu-title">Settings</h2>
+      <div class="setting-item">
         <label class="setting-label">Graphics Quality:</label>
-        <select class="setting-input" id="qualitySelect">
+        <select class="setting-input" id="settingsQualitySelect"> <!-- Renamed ID -->
           <option value="low">Low</option>
           <option value="medium" selected>Medium</option>
           <option value="high">High</option>
@@ -107,7 +124,7 @@
       <div><span>FPS:</span> <span id="debugFps">60</span></div>
       <div><span>Avg FPS:</span> <span id="debugAvgFps">60</span></div>
       <div><span>Quality:</span> 
-        <select id="qualitySelect">
+        <select id="debugQualitySelect"> <!-- Renamed ID -->
           <option value="low">Low</option>
           <option value="medium" selected>Medium</option>
           <option value="high">High</option>
@@ -134,6 +151,12 @@
   </div>
 
   <canvas id="renderCanvas"></canvas>
+
+  <!-- Ad Slot: Bottom Banner -->
+  <div class="ad-container ad-banner-bottom" style="text-align: center; margin-top: 15px;">
+    <!-- AdSense code will be inserted here by Google -->
+    <div class="ad-placeholder" style="width: 728px; height: 90px; background: #f0f0f0; margin: 0 auto; display: flex; align-items: center; justify-content: center; font-style: italic; color: #777;">Advertisement Area (e.g., 728x90)</div>
+  </div>
 
   <!-- Scripts -->
   <script src="https://cdn.babylonjs.com/babylon.js"></script>
