Stage all remaining changes before merging 3DPhysicsCube to main

--- a/games/devstral/index.html
+++ b/games/devstral/index.html
@@ -22,6 +22,20 @@
       user-select: none;
     }
   </style>
+  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WSS4ZGFN9L"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-WSS4ZGFN9L');
+  </script>
+  
+  <!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6162151473120583"
+       crossorigin="anonymous"></script>
 </head>
 <body>
   <div id="score">Score: 0</div>
