--- a/games/runner-refactored/index.html
+++ b/games/runner-refactored/index.html
@@ -13,6 +13,10 @@
 
     gtag('config', 'G-WSS4ZGFN9L');
   </script>
+  
+  <!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6162151473120583"
+       crossorigin="anonymous"></script>
   <style>
     body { 
       margin: 0; 
