--- a/games/snake/index.html
+++ b/games/snake/index.html
@@ -15,6 +15,10 @@
 
     gtag('config', 'G-WSS4ZGFN9L');
   </script>
+  
+  <!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6162151473120583"
+       crossorigin="anonymous"></script>
   <script src="https://cdn.babylonjs.com/babylon.js"></script>
 </head>
 <body>  <header class="site-header">
