--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -14,6 +14,10 @@
 
     gtag('config', 'G-WSS4ZGFN9L');
   </script>
+  
+  <!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6162151473120583"
+       crossorigin="anonymous"></script>
   <style>
     .legal-content {
       max-width: 800px;
