Update main page to showcase enhanced Snake game features
- Updated Snake game card to highlight new features
- Added premium badge and enhanced description
- Listed all new features: power-ups, combo system, ghost mode, audio
- Updated game title to reflect enhanced version
- Added multiple game modes and visual effects tags

--- a/index.html
+++ b/index.html
@@ -239,15 +239,16 @@
             </div>
           </article>
           
-          <article class="game-card" itemscope itemtype="https://schema.org/Game">
+          <article class="game-card premium" itemscope itemtype="https://schema.org/Game">
             <div class="card-header">
               <div class="game-icon">🐍</div>
               <div class="game-meta">
-                <h4 itemprop="name">Snake Game 3D</h4>
+                <h4 itemprop="name">Snake Game 3D - Enhanced</h4>
                 <span class="game-rating">⭐⭐⭐⭐⭐</span>
+                <span class="premium-badge">Enhanced</span>
               </div>
             </div>
-            <p itemprop="description">Classic Snake game reimagined with stunning 3D graphics powered by Babylon.js. Enjoy smooth gameplay, particle effects, and responsive controls.</p>
+            <p itemprop="description">Classic Snake game reimagined with stunning 3D graphics, power-ups, combo system, and multiple game modes. Features ghost mode, particle effects, and immersive audio.</p>
             <div class="game-features">
               <span class="feature-tag">🎮 Classic Gameplay</span>
               <span class="feature-tag">🎨 3D Graphics</span>
@@ -255,9 +256,14 @@
               <span class="feature-tag">📱 Touch Controls</span>
               <span class="feature-tag">🏆 High Scores</span>
               <span class="feature-tag">⚡ Babylon.js Engine</span>
+              <span class="feature-tag">🚀 Power-ups</span>
+              <span class="feature-tag">🔥 Combo System</span>
+              <span class="feature-tag">👻 Ghost Mode</span>
+              <span class="feature-tag">🎵 Audio Effects</span>
+              <span class="feature-tag">🎯 Multiple Modes</span>
             </div>
             <div class="game-buttons">
-              <a href="/games/snake/" class="btn btn-primary" itemprop="url">Play Snake Game</a>
+              <a href="/games/snake/" class="btn btn-primary" itemprop="url">Play Enhanced Snake</a>
             </div>
           </article>
 
